name:               zmcat
version:            0.2
synopsis:
    Command-line tool for ZeroMQ.
Description:
    ZeroMQ is a handy way to communicate between applications:
    .
    [Rationale:] Zmcat is an handy command-line tool to debug or communicate
        with ZeroMQ applications from the shell.
    One use of zmcat is to easily audit, monitor, add cron-jobs shell scripts
    which speak zmq.
    .
    [Limitations:]
    A limitation is that Zmcat only supports printable text. Support for 
    random binary streams will come later.
    .
license:            BSD3
license-file:       LICENSE
author:             Lucas DiCioccio
maintainer:         lucas@dicioccio.fr
copyright:          Copyright (c) 2013 Lucas DiCioccio
category:           Network
build-type:         Simple
cabal-version:      >=1.8

homepage:           https://github.com/lucasdicioccio/zmcat
bug-reports:        https://github.com/lucasdicioccio/zmcat/issues

source-repository head
  type:     git
  location: https://github.com/lucasdicioccio/zmcat

library
  hs-source-dirs:   src
  ghc-options:      -Wall
  ghc-prof-options: -auto-all
  exposed-modules:  Network.Zmcat
  build-depends:    bytestring,
                    base >= 4.5.1.0 && < 5,
                    zeromq3-haskell >= 0.3.1

executable zmcat
    main-is: bin/Zmcat.hs
    build-depends: base >= 4.5.1.0 && < 5,
                   zmcat,
                   bytestring
    ghc-options: -Wall -rtsopts
    ghc-prof-options: -auto-all
